# langchain-langgraph-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml
docs/: architecture.md  guide.md
src/: __init__.py
src/agent/: __init__.py  agents.py  graph.py  nodes.py  state.py
src/core/: __init__.py  constants.py  context.py  middleware.py  settings.py
src/prompts/: assistant.md
src/tools/: __init__.py  tools.py
